--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -29,14 +29,14 @@ jobs:
           git config --local user.name "mazipan"
           git add -A
           
-          arr[0]="feat: 😂 auto commit"
-          arr[1]="feat: 😱 auto commit"
-          arr[2]="feat: 👿 auto commit"
-          arr[3]="feat: 💩 auto commit"
-          arr[4]="feat: 🙏 auto commit"
-          arr[5]="feat: 🙈 auto commit"
-          arr[6]="feat: 🐐 auto commit"
-          arr[7]="feat: 🚀 auto commit"
+          arr[0]="feat: 😸 Suzukaze, Aoba"
+          arr[1]="feat: 😺 Yagami, Kou"
+          arr[2]="feat: 🐰 Takimoto, Hifumi"
+          arr[3]="feat: 🐥 Ahagon, Umiko"
+          arr[4]="feat: 🐱 Sakura, Nene"
+          arr[5]="feat: 🐹 Iijima, Yun"
+          arr[6]="feat: 🐣 Shinoda, Hajime"
+          arr[7]="feat: 🚀 Tooyama, Rin"
           
           rand=$[$RANDOM % ${#arr[@]}]
           
